force-app/main/default/objects/Fact_EmailRoles__c/Fact_EmailRoles__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To capture the roles for which email has to be sent.</description>
    <label>Fact EmailRoles</label>
</CustomObject>