force-app/main/default/objects/Fact_EmailRoles__c/fields/Case_Close__c.field-meta.xml
<CustomField>
    <fullName>Case_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for mentioning whether Case Closure email has to be sent or not.</description>
    <label>Case Close</label>
    <type>Checkbox</type>
</CustomField>