force-app/main/default/objects/Fact_EmailRoles__c/fields/Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Case_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for mentioning whether Case Comment email has to be sent or not.</description>
    <label>Case Comment</label>
    <type>Checkbox</type>
</CustomField>