force-app/main/default/objects/Fact_EmailRoles__c/fields/Case_Create__c.field-meta.xml
<CustomField>
    <fullName>Case_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for mentioning whether Case Creation email has to be sent or not.</description>
    <label>Case Create</label>
    <type>Checkbox</type>
</CustomField>