force-app/main/default/objects/Fact_EmailRoles__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <description>Text field for saving the role name.</description>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>