force-app/main/default/objects/Fact_EmailRoles__c/listViews/FACT_Email_Roles.listView-meta.xml
<ListView>
    <fullName>FACT_Email_Roles</fullName>
    <columns>NAME</columns>
    <columns>Role_Name__c</columns>
    <columns>Case_Close__c</columns>
    <columns>Case_Comment__c</columns>
    <columns>Case_Create__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>FACT Email Roles</label>
</ListView>